--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,31 +1,87 @@
 <html>
+<head>
+    <link href="webjars/bootstrap/3.3.4/css/bootstrap.css">
+</head>
 <body>
-<h2>Hello World!</h2>
-
+<div class="container">
+    <h1>User manager</h1>
+    <hr/>
+    <div class="page"></div>
+</div>
 
 <script src="webjars/jquery/2.1.3/jquery.js"></script>
 <script src="webjars/underscorejs/1.8.3/underscore.js"></script>
 <script src="webjars/backbonejs/1.2.1/backbone.js"></script>
+<script src="webjars/bootstrap/3.3.4/js/bootstrap.js"></script>
+
+<script type="text/template" id="user-list-template">
+    a.btn.btn
+    <table class="table striped">
+        <thead>
+        <tr>
+            <th>First name</th>
+            <th>Last name</th>
+            <th>Age</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <% $.each(users, function(user)){ %>
+            <tr>
+                <td><%user.get('firstname')%></td>
+                <td><%user.get('lastname')%></td>
+                <td><%user.get('age')%></td>
+                <td></td>
+            </tr>
+        <% });%>
+        </tbody>
+    </table>
+</script>
+
+
+
 <script>
+
+//    $.ajaxPrefilter(function(options, originalOptions, jqXHR){
+//        options.url = '/users/get-all' + options.url;
+//    });
+
+    var Users = Backbone.Collection({
+        url: '/users/get-all'
+    });
 
     var UserList = Backbone.View.extend({
         el: '.page',
-        render: function(){
-            this.$el.html();
+        render: function () {
+            var rend = this;
+            var users = new Users();
+            users.fetch({
+                success: function(users){
+                    var template = _.template($('#user-list-template').html(), {users: users.models});
+                    rend.$el.html(template)
+                }
+            });
+            this.$el.html("Table");
         }
     });
 
     var Router = Backbone.Router.extend({
-        routes:{
-            '': 'home'
+        routes: {
+            '': 'home',
+            'edit-user': 'editUser'
         }
     });
 
     var router = new Router();
     var userList = new UserList();
 
-    router.on('route:home', function(){
+    router.on('route:home', function () {
         userList.render();
+        console.log("We are on home page");
+    });
+    router.on('route:editUser', function () {
+//        userList.render();
+        console.log("We are on edit user page");
     });
     Backbone.history.start();
 </script>
